force-app/main/default/objects/Pricing_Structure__c/Pricing_Structure__c.object-meta.xml
<CustomObject>
    <label>Pricing Module</label>
    <nameField>
        <displayFormat>PS-{000000}</displayFormat>
        <label>Pricing Structure Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pricing Module</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>