force-app/main/default/objects/Pricing_Structure__c/fields/BD_Team_Classification__c.field-meta.xml
<CustomField>
    <fullName>BD_Team_Classification__c</fullName>
    <label>Business Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ICG</fullName>
            </value>
            <value>
                <fullName>SECG</fullName>
            </value>
            <value>
                <fullName>ECG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>