force-app/main/default/objects/Pricing_Structure__c/fields/Instrument__c.field-meta.xml
<CustomField>
    <fullName>Instrument__c</fullName>
    <label>Instrument</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Rating - Money Market (Non-SF)</fullName>
            </value>
            <value>
                <fullName>Rating - Bank Loan Rating</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Rating - Money Market (SF)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>