force-app/main/default/objects/Pricing_Structure__c/fields/Min_Fee_Rs_Lacs__c.field-meta.xml
<CustomField>
    <fullName>Min_Fee_Rs_Lacs__c</fullName>
    <label>Min Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>