force-app/main/default/objects/Pricing_Structure__c/fields/Sector__c.field-meta.xml
<CustomField>
    <fullName>Sector__c</fullName>
    <label>Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>NBFC</fullName>
            </value>
            <value>
                <fullName>HFC</fullName>
            </value>
            <value>
                <fullName>MFI</fullName>
            </value>
            <value>
                <fullName>Securitization</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>