force-app/main/default/objects/Pricing_Structure__c/fields/Target_Yield__c.field-meta.xml
<CustomField>
    <fullName>Target_Yield__c</fullName>
    <label>Target Yield</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>