force-app/main/default/objects/Pricing_Structure__c/fields/VOD_Max__c.field-meta.xml
<CustomField>
    <fullName>VOD_Max__c</fullName>
    <label>VOD Max</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>