force-app/main/default/objects/Pricing_Structure__c/fields/VOD_Min__c.field-meta.xml
<CustomField>
    <fullName>VOD_Min__c</fullName>
    <label>VOD Min</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>