force-app/main/default/objects/Pricing_Structure__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BD_Team_Classification__c</columns>
    <columns>Instrument__c</columns>
    <columns>Location__c</columns>
    <columns>Sector__c</columns>
    <columns>VOD_Min__c</columns>
    <columns>VOD_Max__c</columns>
    <columns>Target_Yield__c</columns>
    <columns>Min_Fee_Rs_Lacs__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>