force-app/main/default/objects/Pricing_Structure__c/listViews/ICG_Pricing_module_C.listView-meta.xml
<ListView>
    <fullName>ICG_Pricing_module_C</fullName>
    <columns>NAME</columns>
    <columns>BD_Team_Classification__c</columns>
    <columns>Instrument__c</columns>
    <columns>Location__c</columns>
    <columns>Sector__c</columns>
    <columns>VOD_Min__c</columns>
    <columns>VOD_Max__c</columns>
    <columns>Target_Yield__c</columns>
    <columns>Min_Fee_Rs_Lacs__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BD_Team_Classification__c</field>
        <operation>equals</operation>
        <value>ICG</value>
    </filters>
    <label>ICG Pricing module</label>
</ListView>